--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+*.py[co]
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
 # Object files
 *.o
 *.ko
@@ -21,3 +46,17 @@
 *.i*86
 *.x86_64
 *.hex
+
+# Eclipse PyDev
+.project
+.pydevproject
+
+# Qt Creator
+*.config
+*.creator
+*.creator.user
+*.files
+*.includes
+
+# Vagrant
+.vagrant
