--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
 install:
   - python setup.py install
 script:
-  - reprozip testrun bash -c "ls;echo"
-  - reprozip trace bash -c "ls;echo"
+  - reprozip testrun bash -c "cat /etc/passwd;echo"
+  - reprozip trace bash -c "cat /etc/passwd;echo"
+  - reprozip trace --continue sh -c "cat /etc/group;/bin/id"
