Adds 'reprozip pack' to travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ script:
   - reprozip trace bash -c "cat /etc/passwd;echo"
   - reprozip trace --continue sh -c "cat /etc/group;/usr/bin/id"
   - reprozip graph graph.dot
+  - reprozip pack
