Logs working directories in opened_files table

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
   - python setup.py install
 script:
-  - reprozip testrun bash -c "cat ../../../../../etc/passwd;cd /var/lib;cat ../../group"
+  - reprozip testrun bash -c "cat ../../../../../etc/passwd;cd /var/lib;cat ../../etc/group"
   - reprozip trace bash -c "cat /etc/passwd;echo"
   - reprozip trace --continue sh -c "cat /etc/group;/usr/bin/id"
   - reprozip graph graph.dot
