--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,13 @@ python:
   - "3.2"
   - "3.3"
 install:
-  - python setup.py install
+  - cd reprozip && python setup.py install
+  - cd ../reprounzip && python setup.py install
 script:
   - reprozip testrun bash -c "cat ../../../../../etc/passwd;cd /var/lib;cat ../../etc/group"
   - reprozip trace bash -c "cat /etc/passwd;echo"
   - reprozip trace --continue sh -c "cat /etc/group;/usr/bin/id"
-  - reprozip graph graph.dot
+  - reprounzip graph graph.dot
   - reprozip pack
 notifications:
   email:
