--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 env:
   - TEST_MODE=run_program
-  - TEST_MODE=check_style
 python:
   - "2.7"
   - "3.2"
   - "3.3"
+  - "3.4"
 install: .travis/install.sh
 script: .travis/test.sh
 notifications:
@@ -15,6 +15,8 @@ notifications:
     on_success: change
     on_failure: always
 matrix:
-  exclude:
-    - python: "3.2"
+  include:
+    - python: "2.7"
+      env: TEST_MODE=check_style
+    - python: "3.4"
       env: TEST_MODE=check_style
