Gmail proxy to filter Travis emails about branches
We are only interested about the master branch.

[skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ after_success: .travis/finish.sh
 notifications:
   email:
     recipients:
-       - reprozip-dev@vgc.poly.edu
+       - reprozip.gate@gmail.com
     on_success: change
     on_failure: always
 matrix:
