--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,7 @@ matrix:
       env: TEST_MODE=coverage_py
     - python: "2.7"
       env: TEST_MODE=coverage_c
+  exclude:
+    # This is already covered by coverage_py and coverage_c
+    - python: "2.7"
+      env: TEST_MODE=run_program
