--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 install:
-- curl -sLo - https://github.com/moul/travis-docker/raw/master/install.sh | sh -xe
+#- curl -sLo - https://github.com/moul/travis-docker/raw/master/install.sh | sh -xe
+- sh -xe install.sh
   
 script:
 - ./docker run ubuntu /bin/echo hello world
