--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ install:
 script:
 - PATH="${TRAVIS_BUILD_DIR}:${PATH}" docker run ubuntu /bin/echo hello world
 - PATH="${TRAVIS_BUILD_DIR}:${PATH}" fig build test
-- PATH="${TRAVIS_BUILD_DIR}:${PATH}" fig up test
+- PATH="${TRAVIS_BUILD_DIR}:${PATH}" fig up -d test && fig logs | head -n 30
 #- PATH="${TRAVIS_BUILD_DIR}:${PATH}" fig run test /bin/echo hello world
