Removed test files

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ install:
 
 script:
 - ./run docker run ubuntu /bin/echo hello world
-- ./run fig build test
-- ./run "fig up test && echo Yeah"
+- wget https://gist.githubusercontent.com/moul/0f53ae391ae7d7116e24/raw/23307093546b6ae2f94208c188f5ce4fca2be996/docker-compose.yml
 - ./run docker-compose build test
 - ./run "docker-compose up test && echo Yeah"
-#- ./run fig run test /bin/echo hello world
