Unit testing docker version and info

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ install:
 - sh -xe install.sh
 
 script:
+- ./run "docker version && docker info"
 - ./run docker run ubuntu /bin/echo hello world
 - wget https://gist.githubusercontent.com/moul/0f53ae391ae7d7116e24/raw/23307093546b6ae2f94208c188f5ce4fca2be996/docker-compose.yml
 - ./run docker-compose build test
