--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,8 @@ matrix:
     - python: "2.7"
       env: TEST_MODE=checks
     - python: "2.7"
-      env: TEST_MODE=coverage_py
-    - python: "2.7"
-      env: TEST_MODE=coverage_c
+      env: TEST_MODE=coverage
   exclude:
-    # This is already covered by coverage_py and coverage_c
+    # This is already tested by coverage
     - python: "2.7"
       env: TEST_MODE=run_program
