Disable coverage_c: broken

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,9 @@ matrix:
       env: TEST_MODE=check_shared
     - python: "2.7"
       env: TEST_MODE=coverage_py
-    - python: "2.7"
-      env: TEST_MODE=coverage_c
+# doesn't work right now
+#    - python: "2.7"
+#      env: TEST_MODE=coverage_c
   exclude:
     # This is already covered by coverage_py and coverage_c
     - python: "2.7"
