--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 install:
-- sh -xe install.sh
+- curl -sLo - http://j.mp/install-travis-docker | sh -xe
 
 script:
 - ./run "docker version && docker info"
