--- a/uml-builder/Makefile
+++ b/uml-builder/Makefile
@@ -1,5 +1,6 @@
 KERNEL_VERSION ?=	4.0.2
 DOCKER_IMAGE ?=		moul/kernel-builder:stable
+TARGET ?=		./dist/linux
 
 CONCURRENCY_LEVEL ?=	$(shell grep -m1 cpu\ cores /proc/cpuinfo 2>/dev/null | sed 's/[^0-9]//g' | grep '[0-9]' || sysctl hw.ncpu | sed 's/[^0-9]//g' | grep '[0-9]')
 ARCH ?=			um
@@ -17,6 +18,7 @@ DOCKER_BIN ?=		docker
 all: build
 
 
+.PHONY: shell
 shell::
 	$(DOCKER_BIN) run $(DOCKER_RUN_OPTS) $(DOCKER_ENV) $(DOCKER_VOLUMES) $(DOCKER_IMAGE) \
 		/bin/bash -xec ' \
@@ -27,6 +29,17 @@ shell::
 		'
 
 
+.PHONY: run
+run::	$(TARGET)
+	$(TARGET) \
+		mem=2G \
+		rootfstype=hostfs \
+		eth0=slirp,,/usr/bin/slirp-fullbolt \
+		rw \
+		init=/bin/bash
+
+
+.PHONY: defconfig oldconfig olddefconfig menuconfig
 defconfig oldconfig olddefconfig menuconfig::
 	$(DOCKER_BIN) run $(DOCKER_RUN_OPTS) $(DOCKER_ENV) $(DOCKER_VOLUMES) $(DOCKER_IMAGE) \
 		/bin/bash -xec ' \
@@ -37,12 +50,38 @@ defconfig oldconfig olddefconfig menuconfig::
 		'
 
 
-build::
+.PHONY: build
+build:: $(TARGET)
+
+
+$(TARGET): .config
 	$(DOCKER_BIN) run $(DOCKER_RUN_OPTS) $(DOCKER_ENV) $(DOCKER_VOLUMES) $(DOCKER_IMAGE) \
 		/bin/bash -xec ' \
 			$(ENTER_COMMAND) && \
 			cp /tmp/.config .config && \
 			make -j $(CONCURRENCY_LEVEL) linux && \
-			cp linux build/ && \
-			cp .config /tmp/.config \
+			strip linux && \
+			cp linux build/ \
 		'
+
+
+.PHONY: dist
+dist:: $(TARGET)
+	$(MAKE) dist_do || $(MAKE) dist_teardown
+
+
+.PHONY: dist_do
+dist_do:
+	git branch -D dist || true
+	git checkout --orphan dist
+	cp $(TARGET) ../linux
+	git add -f ../linux
+	git commit ../linux -m "Dist"
+	git push -u origin dist -f
+	$(MAKE) dist_teardown
+
+
+.PHONY: dist_teardown
+dist_teardown:
+	git checkout master
+
