Use the bash codecov uploader only

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
                 sudo apt-get update -qq
                 sudo apt-get install -qq libc6-dev-i386 gcc-multilib libsqlite3-dev
                 if [ $TEST_MODE = "coverage" ]; then
-                    pip install 'coverage<5' codecov
+                    pip install 'coverage<5'
                     pip install -e ./reprozip -e ./reprounzip -e ./reprounzip-docker -e ./reprounzip-vagrant -e ./reprounzip-vistrails -e ./reprounzip-qt -e ./reprozip-jupyter
                 else
                     pip install ./reprozip ./reprounzip ./reprounzip-docker ./reprounzip-vagrant ./reprounzip-vistrails ./reprounzip-qt -e ./reprozip-jupyter
@@ -106,10 +106,10 @@ jobs:
         # Python
         if [ -f .coverage ]; then mv .coverage .coverage.orig; fi # FIXME: useless?
         coverage combine
-        codecov
 
         # C
         # Find the coverage file (in distutils's build directory)
         OBJDIR=$(dirname "$(find . -name pytracer.gcno | head -n 1)")
         (cd reprozip/native && gcov -o ../../$OBJDIR *.c)
-        (cd reprozip && curl -s -o - https://codecov.io/bash | bash -s -)
+
+        curl -s -o - https://codecov.io/bash | bash -s -
