--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,8 +48,10 @@ jobs:
                 if [ "$TEST_MODE" = "coverage" ]; then
                     export CFLAGS="-fprofile-arcs -ftest-coverage"
                 fi
+                PKGS="libc6-dev-i386 gcc-multilib libsqlite3-dev"
+                if [ "$TEST_MODE" = "coverage" ]; then PKGS="$PKGS lcov"; fi
                 sudo apt-get update -qq
-                sudo apt-get install -qq libc6-dev-i386 gcc-multilib libsqlite3-dev
+                sudo apt-get install -qq $PKGS
                 if [ $TEST_MODE = "coverage" ]; then
                     pip install 'coverage<5'
                     pip install -e ./reprozip -e ./reprounzip -e ./reprounzip-docker -e ./reprounzip-vagrant -e ./reprounzip-vistrails -e ./reprounzip-qt -e ./reprozip-jupyter
@@ -110,6 +112,6 @@ jobs:
         # C
         # Find the coverage file (in distutils's build directory)
         OBJDIR=$(dirname "$(find . -name pytracer.gcno | head -n 1)")
-        (cd reprozip/native && gcov -o ../../$OBJDIR *.c)
+        (cd reprozip/native && lcov --directory ../../$OBJDIR -c -o reprozip.lcov)
 
-        curl -s -o - https://codecov.io/bash | bash -s -
+        curl -s -o - https://codecov.io/bash | bash -s - -X gcov
