--- a/scripts/conda/reprounzip-vagrant/meta.yaml
+++ b/scripts/conda/reprounzip-vagrant/meta.yaml
@@ -25,6 +25,9 @@ requirements:
   build:
     - python
     - setuptools
+    - reprounzip >=1.0.3
+    - rpaths >=0.8
+    - paramiko
 
   run:
     - python
