Fix reprounzip-qt conda recipe

--- a/scripts/conda/reprounzip-qt/meta.yaml
+++ b/scripts/conda/reprounzip-qt/meta.yaml
@@ -30,8 +30,7 @@ requirements:
 
   run:
     - python
-    - setuptools  # for pkg_resources
-    - pyqt
+    - pyqt <5
 
 test:
   # Python imports
