--- a/scripts/conda/reprounzip-vistrails/meta.yaml
+++ b/scripts/conda/reprounzip-vistrails/meta.yaml
@@ -50,7 +50,8 @@ test:
 
 about:
   home: http://vida-nyu.github.io/reprozip/
-  license: BSD License
+  license: BSD-3-Clause
+  license_family: BSD
   summary: 'Linux tool enabling reproducible experiments (vistrails plugin)'
 
 # See
