--- a/scripts/conda/reprounzip/meta.yaml
+++ b/scripts/conda/reprounzip/meta.yaml
@@ -23,6 +23,8 @@ build:
   # number: 1
   string: _REPLACE_buildstr_REPLACE_
 
+  script: python setup.py install --single-version-externally-managed --record=record.txt
+
 requirements:
   build:
     - python
