--- a/scripts/macos/app-shim/ReproUnzip.app/Contents/Info.plist
+++ b/scripts/macos/app-shim/ReproUnzip.app/Contents/Info.plist
@@ -15,6 +15,8 @@
 			</array>
 			<key>CFBundleTypeName</key>
 			<string>ReproZip Package</string>
+			<key>CFBundleTypeIconFile</key>
+			<string>icon</string>
 			<key>CFBundleTypeOSTypes</key>
 			<array>
 				<string>????</string>
@@ -25,6 +27,8 @@
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>reprounzip-qt</string>
+	<key>CFBundleIconFile</key>
+	<string>icon</string>
 	<key>CFBundleIdentifier</key>
 	<string>edu.nyu.engineering.vida.reprounzip</string>
 	<key>CFBundleInfoDictionaryVersion</key>
