Add reprozip-jupyter -> reprounzip dependency

--- a/scripts/conda/reprozip-jupyter/meta.yaml
+++ b/scripts/conda/reprozip-jupyter/meta.yaml
@@ -33,6 +33,7 @@ requirements:
   run:
     - python
     - rpaths >=0.8
+    - reprounzip >=1.0
     - notebook
     - jupyter-client
     - nbformat
