--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: trusty
+dist: xenial
 services:
   - docker
 language: python
@@ -14,10 +14,10 @@ script: .travis/test.sh
 after_success: .travis/finish.sh
 matrix:
   include:
-    - dist: trusty
+    - dist: xenial
       python: "2.7"
       env: TEST_MODE=checks
-    - dist: trusty
+    - dist: xenial
       python: "2.7"
       env: TEST_MODE=coverage
   exclude:
