--- a/scripts/conda/reprounzip/meta.yaml
+++ b/scripts/conda/reprounzip/meta.yaml
@@ -32,6 +32,7 @@ requirements:
   run:
     - python
     - setuptools  # for pkg_resources
+    - distro
     - pyyaml
     - requests
     - rpaths >=0.8
