CI: Allow W503 in flake8

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,7 +75,7 @@ jobs:
                 python tests --run-docker
                 ;;
             checks)
-                flake8 --ignore=E731,W504
+                flake8 --ignore=E731,W503,W504
                 diff -q reprozip/reprozip/common.py reprounzip/reprounzip/common.py
                 diff -q reprozip/reprozip/utils.py reprounzip/reprounzip/utils.py
                 find reprozip reprounzip reprozip-* reprounzip-* .travis -name '*.py' -or -name '*.sh' -or -name '*.h' -or -name '*.c' | (set +x; while read i; do
