--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,4 +112,4 @@ jobs:
         # Find the coverage file (in distutils's build directory)
         OBJDIR=$(dirname "$(find . -name pytracer.gcno | head -n 1)")
         (cd reprozip/native && gcov -o ../../$OBJDIR *.c)
-        curl -s -o - https://codecov.io/bash | bash -
+        (cd reprozip && curl -s -o - https://codecov.io/bash | bash -s -)
