--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
                 sudo apt-get update -qq
                 sudo apt-get install -qq $PKGS
                 if [ $TEST_MODE = "coverage" ]; then
-                    pip install 'coverage<5'
+                    pip install 'coverage>=5,<6'
                     pip install -e ./reprozip -e ./reprounzip -e ./reprounzip-docker -e ./reprounzip-vagrant -e ./reprounzip-vistrails -e ./reprounzip-qt -e ./reprozip-jupyter
                 else
                     pip install ./reprozip ./reprounzip ./reprounzip-docker ./reprounzip-vagrant ./reprounzip-vistrails ./reprounzip-qt -e ./reprozip-jupyter
