--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python }}
+        python-version: "3.9"
     - name: Install dependencies
       run: |
         pip install ./reprozip-core ./reprounzip
